Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.16
-
Fix Version/s: 10.1.17
-
Labels:None
Description
In Galera cluster, a local transaction could be aborted on the node if it conflicts with a remote transaction (higher priority). During code inspection, it was found that ha_abort_transaction() (function responsible for transaction abort) only looked for engines registered under standard transaction (st_transactions::all, and not statement transaction st_transactions::stmt). Thus, a node won't be able to abort a transaction executing in autocommit mode.
Attachments
Issue Links
- links to