MDEV-10478: Trx abort does not work in autocommit mode

THD's statement transaction handle (st_transactions::stmt)
should also be looked for registered htons while serving a
request to abort a transaction.